// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> should render 1`] = `
.c0 {
  display: none;
}

.c1 {
  margin: 50px 0px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
}

.c1 li {
  font-size: 0.9em;
  list-style-type: none;
  white-space: nowrap;
}

@media only screen and (max-width:768px) {
  .c0 {
    display: block;
  }

  .c0 .menu-icon {
    height: 40px;
    margin-right: 20px!important;
  }

  .c0 .header-menu-background-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
  }

  .c0 .header-menu-overlay {
    position: absolute;
    top: 0;
    left: 0;
    padding: 20px 0;
    width: calc(100% - 2px);
    list-style: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #1C1311;
    border: 1px solid #F3E5CF;
    gap: 20px;
    z-index: 9;
  }

  .c0 .header-menu-overlay li {
    border-bottom: 1px solid #F3E5CF;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <svg
      class="menu-icon"
    />
  </div>
  <ul
    class="c1"
  />
</div>
`;

exports[`<HeaderMenu /> should render with links 1`] = `
.c0 {
  display: none;
}

.c1 {
  margin: 50px 0px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
}

.c1 li {
  font-size: 0.9em;
  list-style-type: none;
  white-space: nowrap;
}

@media only screen and (max-width:768px) {
  .c0 {
    display: block;
  }

  .c0 .menu-icon {
    height: 40px;
    margin-right: 20px!important;
  }

  .c0 .header-menu-background-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
  }

  .c0 .header-menu-overlay {
    position: absolute;
    top: 0;
    left: 0;
    padding: 20px 0;
    width: calc(100% - 2px);
    list-style: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #1C1311;
    border: 1px solid #F3E5CF;
    gap: 20px;
    z-index: 9;
  }

  .c0 .header-menu-overlay li {
    border-bottom: 1px solid #F3E5CF;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <svg
      class="menu-icon"
    />
  </div>
  <ul
    class="c1"
  >
    <li>
      <a
        href="/path1"
      >
        LINK1
      </a>
    </li>
    <li>
      <a
        href="/path2"
      >
        LINK2
      </a>
    </li>
  </ul>
</div>
`;
